# twitch_dungeon

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0a91fb858408_.py  1ef0af1f49a5_.py  4856469a364f_.py  4ff1a2cb60c0_.py  61298763f7e4_create_characters_table.py  88de3fba4b96_.py  cf2c826e25be_.py  e415a1abf870_create_table_items.py
tests/: test_stub.py
twitch_dungeon/: bot.py  classes.py  settings.py
twitch_dungeon/db/: tables.py
util/: dbupdate.ps1  dbupdate.sh
