[tool.poetry]
name = "twitch_dungeon"
version = "0.1.0"
description = "a twitch dungeon"
authors = ["chalupaul <me@chalupaul.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
twitchio = "^1.1.0"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
