[tool.poetry]
name = "twitch-dungeon"
version = "0.1.0"
description = "a twitch dungeon"
authors = ["chalupaul <me@chalupaul.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
twitchio = "^1.1.0"
python-dotenv = "^0.14.0"
sqlalchemy = "^1.3.20"
databases = "^0.4.0"
aiosqlite = "^0.15.0"
alembic = "^1.4.3"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pytest = "^6.1.1"
flake8 = "^3.8.4"
taskipy = "^1.4.0"

[tool.poetry.scripts]
bot = "twitch_dungeon.bot:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
